--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -6,6 +6,10 @@
                 "login": "Имя пользователя",
                 "password": "Пароль"
             }
+        },
+        "locationDenied": {
+            "placeholder": "Приложению по каким-то причинам не был дан доступ к локации. Исправьте это вручную в настройках приложения, а затем перезапустите его.",
+            "button": "В настройки"
         }
     },
     "ActiveSurvey": {
@@ -44,15 +48,6 @@
         "caption": "Фоновая отправка",
         "enabled": "Вкл.",
         "disabled": "Выкл."
-    },
-    "LocationDenied": {
-        "placeholder": "Приложению по каким-то причинам не был дан доступ к локации. Исправьте это вручную в настройках приложения, а затем перезапустите его.",
-        "button": "В настройки"
-    },
-    "Login": {
-        "changeIP": "Изменить адрес",
-        "wrongCreds": "Неправильный логин или пароль",
-        "connectionError": "Проблемы с подключением"
     },
     "Queue": {
         "item": {
