--- a/src/localization/en/translation.json
+++ b/src/localization/en/translation.json
@@ -1,4 +1,13 @@
 {
+    "navigation": {
+        "appRouter": {
+            "screenTitles": {
+                "surveys": "Surveys",
+                "queue": "Queue",
+                "settings": "Settings"
+            }
+        }
+    },
     "screens": {
         "login": {
             "loginButton": "Login",
@@ -35,13 +44,6 @@
             "back": "Back",
             "finish": "Finish",
             "next": "Next"
-        }
-    },
-    "AppRouter": {
-        "screenTitles": {
-            "surveys": "Surveys",
-            "queue": "Queue",
-            "settings": "Settings"
         }
     },
     "Background": {
