--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -19,6 +19,21 @@
         "locationDenied": {
             "placeholder": "Приложению по каким-то причинам не был дан доступ к локации. Исправьте это вручную в настройках приложения, а затем перезапустите его.",
             "button": "В настройки"
+        },
+        "settings": {
+            "exitModal": {
+                "title": "Вы точно хотите выйти?",
+                "yes": "Да",
+                "no": "Нет"
+            },
+            "languageModal": {
+                "cancel": "Отмена",
+                "title": "Выберите язык",
+                "ru": "Русский",
+                "en": "Английский"
+            },
+            "exit": "Выйти",
+            "chooseLanguage": "Выберите язык"
         }
     },
     "ActiveSurvey": {
@@ -71,15 +86,6 @@
             }
         },
         "empty": "Опросов в очереди на отправку нет"
-    },
-    "Settings": {
-        "modal": {
-            "title": "Вы точно хотите выйти?",
-            "yes": "Да",
-            "no": "Нет"
-        },
-        "exit": "Выйти",
-        "chooseLanguage": "Выберите язык"
     },
     "Surveys": {
         "noSurvInArea": "Нет опросов для вашего местоположения",
