--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -13,6 +13,9 @@
             },
             "activeSurvey": {
                 "title": "Активный опрос"
+            },
+            "surveyInfo": {
+                "title": "Информация об опросе"
             }
         }
     },
@@ -44,7 +47,15 @@
             "chooseLanguage": "Выберите язык"
         },
         "survey": {
-            "noSurveys": "Нет опросов для вашего метоположения"
+            "noSurveys": "Нет опросов для вашего метоположения",
+            "pullDown": "Потяните вниз, чтобы обновить"
+        },
+        "surveyInfo": {
+            "beginDate": "Дата и время начала",
+            "endDate": "Дата и время окончания",
+            "form": "Бланк опроса",
+            "questionsCount": "Количество вопросов",
+            "startSurvey": "Начать опрос"
         }
     },
     "ActiveSurvey": {
