--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -82,68 +82,9 @@
             "pullDown": "Потяните вниз, чтобы обновить"
         }
     },
-    "ActiveSurvey": {
-        "startScreen": {
-            "startText": "Вы готовы к прохождению опроса?",
-            "button": "Начать"
-        },
-        "emptySurvey": {
-            "title": "К сожалению, в этом опросе нет вопросов",
-            "toListButton": "К списку"
-        },
-        "endSurvey": {
-            "approvalText": "Вы точно хотите закончить тестирование?",
-            "yesButton": "Да",
-            "noButton": "Нет"
-        },
-        "sending": {
-            "success": "Опрос успешно отправлен, дождитесь перенаправления.",
-            "putToQueue": "При отправке возникла ошибка. Опрос перенаправлен в очередь.",
-            "failToQueue": "Ошибка при отправке и помещении в очередь. Пройдите тест ещё раз."
-        },
-        "menuButtons": {
-            "back": "Назад",
-            "finish": "Завершить",
-            "next": "Далее"
-        }
-    },
-    "Background": {
-        "caption": "Фоновая отправка",
-        "enabled": "Вкл.",
-        "disabled": "Выкл."
-    },
-    "Queue": {
-        "item": {
-            "noTitle": "Без названия",
-            "noDescr": "Без описания",
-            "indexCaption": "ID опроса:",
-            "noIndex": "Индекса нет",
-            "errorTitle": "Причина попадания в очередь:",
-            "noErrorInf": "Информации нет",
-            "delayedSendingError": "Ошибка отправки в отложенном режиме"
-        },
-        "buttons": {
-            "deleting": "Удалить",
-            "sending": {
-                "default": "Отправить",
-                "processing": "Отправка...",
-                "success": "Успешно!",
-                "error": "Ошибка!"
-            }
-        },
-        "empty": "Опросов в очереди на отправку нет"
-    },
-    "Surveys": {
-        "noSurvInArea": "Нет опросов для вашего местоположения",
-        "noSurvAtAll": "Опросов нет независимо от местоположения"
-    },
-    "SurveyTemp": {
-        "noTitle": "Без названия",
-        "noDescr": "Без описания"
-    },
-    "UI": {
-        "Timer": {
-            "attention": "По истечении времени соединение будет признано некачественным"
+    "components": {
+        "surveyList": {
+            "lastUpdatedAt": "Последнее обновление: "
         }
     }
 }
