active survey screen done

--- a/src/localization/en/translation.json
+++ b/src/localization/en/translation.json
@@ -85,9 +85,9 @@
         },
         "activeSurvey": {
             "required": "Required",
-            "next": "Next",
-            "withoutAnswer": "Without answer",
-            "finish": "Finish"
+            "submit": "Submit",
+            "finish": "Finish",
+            "success": "Survey successfully finished"
         }
     },
     "components": {
