result show done

--- a/src/localization/en/translation.json
+++ b/src/localization/en/translation.json
@@ -93,6 +93,9 @@
     "components": {
         "surveyList": {
             "lastUpdatedAt": "Last updated at: "
+        },
+        "pendingResultListItem": {
+            "pending": "Pending"
         }
     }
 }
