--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -91,6 +91,9 @@
     "components": {
         "surveyList": {
             "lastUpdatedAt": "Последнее обновление: "
+        },
+        "pendingResultListItem": {
+            "pending": "Ожидается отправка"
         }
     }
 }
