--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -93,7 +93,21 @@
             "lastUpdatedAt": "Последнее обновление: "
         },
         "pendingResultListItem": {
-            "pending": "Ожидается отправка"
+            "pending": "Ожидается отправка",
+            "sending": "Отправка",
+            "created": "Создан",
+            "send": "Отправить",
+            "sent": "Отправлено",
+            "error": "Ошибка"
+        },
+        "resultList": {
+            "lastUpdatedAt": "Последнее обновление: ",
+            "clear": "Очистить очередь",
+            "modal": {
+                "title": "Этот опрос уже был отправлен. Хотите отправить его снова?",
+                "yes": "Да",
+                "no": "Нет"
+            }
         }
     }
 }
