--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -27,6 +27,14 @@
             "settings": {
                 "title": "Настройки"
             }
+        },
+        "loginRouter": {
+            "login": {
+                "title": "Вход"
+            },
+            "settings": {
+                "title": "Настройки"
+            }
         }
     },
     "screens": {
@@ -35,7 +43,8 @@
             "inputLabels": {
                 "login": "Имя пользователя",
                 "password": "Пароль"
-            }
+            },
+            "useOffline": "У меня нет подключения к Интернету"
         },
         "locationDenied": {
             "placeholder": "Приложению по каким-то причинам не был дан доступ к локации. Исправьте это вручную в настройках приложения, а затем перезапустите его.",
