--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -66,14 +66,18 @@
                 "header": "Общее",
                 "language": "Язык"
             },
-            "exit": "Выйти",
             "about": {
                 "header": "О приложении",
                 "name": "Название",
-                "author": "Автор",
-                "email": "Email",
                 "version": "Версия"
-            }
+            },
+            "clearModal": {
+                "title": "Вы действительно хотите удалить все данные приложения?",
+                "yes": "Да",
+                "cancel": "Отмена"
+            },
+            "exit": "Выйти",
+            "clear": "Удалить все данные"
         },
         "survey": {
             "noSurveys": "Нет опросов для вашего метоположения",
