account router added

--- a/src/localization/en/translation.json
+++ b/src/localization/en/translation.json
@@ -35,6 +35,11 @@
             "settings": {
                 "title": "Settings"
             }
+        },
+        "accountRouter": {
+            "account": {
+                "title": "Account"
+            }
         }
     },
     "screens": {
