--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -35,6 +35,11 @@
             "settings": {
                 "title": "Настройки"
             }
+        },
+        "accountRouter": {
+            "account": {
+                "title": "Аккаунт"
+            }
         }
     },
     "screens": {
