--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -56,11 +56,6 @@
             "button": "В настройки"
         },
         "settings": {
-            "exitModal": {
-                "title": "Вы точно хотите выйти?",
-                "yes": "Да",
-                "no": "Нет"
-            },
             "languageModal": {
                 "cancel": "Отмена",
                 "title": "Выберите язык",
@@ -89,7 +84,6 @@
                 "ok": "Ок",
                 "cancel": "Отмена"
             },
-            "exit": "Выйти",
             "clear": "Удалить все данные"
         },
         "survey": {
@@ -112,6 +106,17 @@
             "submit": "Ответить",
             "finish": "Завершить",
             "success": "Опрос успешно завершен"
+        },
+        "account": {
+            "noName": "Нет имени",
+            "interviewer": "Интервьюер",
+            "admin": "Администратор",
+            "exitModal": {
+                "title": "Вы точно хотите выйти?",
+                "yes": "Да",
+                "no": "Нет"
+            },
+            "exit": "Выйти"
         }
     },
     "components": {
