--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -95,7 +95,8 @@
             "endDate": "Дата и время окончания",
             "form": "Бланк опроса",
             "questionsCount": "Количество вопросов",
-            "startSurvey": "Начать опрос"
+            "startSurvey": "Начать опрос",
+            "surveyWithId": "Опрос {{id}}"
         },
         "results": {
             "noResults": "У вас еще нет завершенных опросов",
@@ -105,7 +106,8 @@
             "required": "Обязательный",
             "submit": "Ответить",
             "finish": "Завершить",
-            "success": "Опрос успешно завершен"
+            "success": "Опрос успешно завершен",
+            "surveyWithId": "Опрос {{id}}"
         },
         "account": {
             "noName": "Нет имени",
