import surveys feature added

--- a/src/localization/en/translation.json
+++ b/src/localization/en/translation.json
@@ -144,5 +144,8 @@
                 "no": "No"
             }
         }
+    },
+    "errors": {
+        "fileFormatError": "Wrong file format!"
     }
 }
