--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -142,5 +142,8 @@
                 "no": "Нет"
             }
         }
+    },
+    "errors": {
+        "fileFormatError": "Неверный формат файла!"
     }
 }
