--- a/src/localization/ru/translation.json
+++ b/src/localization/ru/translation.json
@@ -52,7 +52,7 @@
             "useOffline": "У меня нет подключения к Интернету"
         },
         "locationDenied": {
-            "placeholder": "Приложению по каким-то причинам не был дан доступ к локации. Исправьте это вручную в настройках приложения, а затем перезапустите его.",
+            "placeholder": "Нет доступа к геолокации устройства.\nПроверьте, включена ли геолокация и даны ли приложению соответвующие разрешения.",
             "button": "В настройки"
         },
         "settings": {
